# Pablo

./: .gitignore  CMakeLists.txt  README.md  debug.hpp  main.cpp
src/: constants.hpp  game.cpp  game.hpp
src/Player/: bot.cpp  bot.hpp  person.cpp  person.hpp  player.cpp  player.hpp
src/abstract/: container.hpp
src/objects/: card.cpp  card.hpp  package.cpp  package.hpp
src/scenes/: game_scene.cpp  game_scene.hpp  inGame.cpp  inGame.hpp  inGame.hpp.save-failed
